adding user model, handlers, repository and endpoints
