# cmd/server/handlers/users/find-one.go
@@ -1,24 +1,35 @@
-package handlers
+package users
 
 import (
 	"net/http"
 
-	"github.com/AthirsonSilva/music-streaming-api/cmd/server/models"
 	"github.com/AthirsonSilva/music-streaming-api/cmd/server/repositories"
 	"github.com/AthirsonSilva/music-streaming-api/cmd/server/utils/api"
 )
 
-// @Summary Find all albums
-// @Tags albums
+// @Summary Find one user by ID
+// @Tags users
 // @Produce  json
 // @Success 200 {object} api.Response
 // @Failure 500 {object} api.Response
 // @Failure 400 {object} api.Response
-// @Router /api/v1/albums [get]
-func FindAllAlbums(res http.ResponseWriter, req *http.Request) {
-	albums, err := repositories.FindAllAlbums()
+// @Failure 404 {object} api.Response
+// @Param id path string true "User ID"
+// @Router /api/v1/users/{id} [get]
+func FindOneUserById(res http.ResponseWriter, req *http.Request) {
+	id := api.PathVar(req, 1)
 	var response api.Response
 
+	if id == "" {
+		response = api.Response{
+			Message: "ID is required",
+			Data:    nil,
+		}
+		api.JSON(res, response, http.StatusBadRequest)
+		return
+	}
+
+	user, err := repositories.FindUserById(id)
 	if err != nil {
 		response = api.Response{
 			Message: err.Error(),
@@ -28,15 +39,10 @@ func FindAllAlbums(res http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	var albumsResponse []models.AlbumResponse
-	for _, album := range albums {
-		response := album.ToResponse()
-		albumsResponse = append(albumsResponse, response)
-	}
-
+	userResponse := user.ToResponse()
 	response = api.Response{
-		Message: "Albums found",
-		Data:    albumsResponse,
+		Message: "User found",
+		Data:    userResponse,
 	}
 	api.JSON(res, response, http.StatusOK)
 }
